RIPE NCC has merged 49e39ec
* chore(deps): update node docker tag to v25 [a9618478]
* Sorting everywhere [46be7ee7]
* Fix compilation [372b1594]
* Sort by customer AS for predictable order [516b30e1]
* Fixes [7da8ba7e]
* Better tests, refactor [07257e44]
* Remove duplicate test [cafd4e00]
* Add previous configuration to the update ASPA command [e1d5966a]
* chore(deps): update dependency org.sonarqube:org.sonarqube.gradle.plugin to v7 [421f017a]